# github-todoist-sync

./: .env.template  README-template.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  security.yml  test.yml
scripts/: sync.sh
src/github_todoist_sync/: main.py
src/my_project/: __init__.py  core.py
tests/: test_core.py  test_main.py
